@@ -41,18 +41,18 @@ func TestIsSubpath(t *testing.T) {
 			{"/a", "/a/b/c", "/a/b/c", true},
 			{"/a", "/A/b/c", "/a/b/c", true},
 		},
-		// (Windows issue) See issue:
-		//"windows": {
-		//	{"/", "a", "\\a", true},
-		//	{"/a", "b", "\\a\\b", true},
-		//	{"/a", "b/c", "\\a\\b\\c", true},
-		//	//
-		//	{"/a/b", "/a/c", "\\a\\c", false},
-		//	{"/a/b", "/a/b/../c", "\\a\\c", false},
-		//	{"/a/b", "../c", "\\a\\c", false},
-		//	{"/a", "/a/b/c", "\\a\\b\\c", true},
-		//	{"/a", "/A/b/c", "\\a\\b\\c", true},
-		//},
+		"windows": {
+			{"c:/", "/a", "c:\\a", true},
+			{"c:/a", "b", "c:\\a\\b", true},
+			{"c:/a", "b/c", "c:\\a\\b\\c", true},
+			{"c:/a/b", "/a/c", "c:\\a\\c", false},
+			{"c:/a/b", "/a/b/../c", "c:\\a\\c", false},
+			{"c:/a/b", "../c", "c:\\a\\c", false},
+			{"c:/a", "/a/b/c", "c:\\a\\b\\c", true},
+			{"c:/a", "/A/b/c", "c:\\a\\b\\c", true},
+			{"c:/a", "c:/A/b/c", "c:\\a\\b\\c", true},
+			{"c:/a", "c:/b/c", "c:\\b\\c", false},
+		},
 	}
 
 	osSpecificTests, found := testCases[runtime.GOOS]
@@ -62,7 +62,8 @@ func TestIsSubpath(t *testing.T) {
 
 	for _, test := range osSpecificTests {
 		t.Run(fmt.Sprintf("[%s] root:'%s path: %s'", runtime.GOOS, test.root, test.path), func(t *testing.T) {
-			newPath, result := joinPaths(test.root, test.path)
+			newPath, result, err := joinPaths(test.root, test.path)
+			assert.NoError(t, err)
 			assert.Equal(t, test.resultPath, newPath)
 			assert.Equal(t, test.isSubpath, result)
 		})
